[package]
name = "modulo_int"
version = "0.1.0"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-generic-wrap = {version = "0.1.0"}
num-traits = "0.2.12"
num-integer = "0.1.44"
